--- a/scss/hq.scss
+++ b/scss/hq.scss
@@ -1,3 +1,6 @@
+// Add custom fonts by visiting and search https://fonts.google.com
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
 // Import utilities.
 @import 'utils/typography';
 @import 'utils/colors';
@@ -9,10 +12,10 @@
 @import 'global/grid';
 @import 'global/flex';
 
-/* Styles limited to boilerplate sheets */
-.boilerplate {
+/* Styles limited to hq sheets */
+.hq {
   @import 'components/forms';
   @import 'components/resource';
-  @import 'components/tabs';
   @import 'components/items';
+  @import 'components/effects';
 }
