Added new stats to char sheet.

--- a/templates/actor/actor-character-sheet.html
+++ b/templates/actor/actor-character-sheet.html
@@ -58,7 +58,14 @@
     <div class="tab features" data-group="primary" data-tab="features">
       <section class="grid grid-3col">
         <aside class="sidebar">
-
+          <div class="flex-row">
+            <p>Attack</p>
+            <input type="text" name="data.attributes.attack.value" value="{{data.attributes.attack.value}}" data-dtype="Number"/>
+          </div>
+          <div class="flex-row">
+            <p>Defence</p>
+            <input type="text" name="data.attributes.defence.value" value="{{data.attributes.defence.value}}" data-dtype="Number"/>
+          </div>
           {{!-- The grid classes are defined in scss/global/_grid.scss. To use,
           use both the "grid" and "grid-Ncol" class where "N" can be any number
           from 1 to 12 and will create that number of columns.  --}}
