--- a/templates/actor/actor-character-sheet.html
+++ b/templates/actor/actor-character-sheet.html
@@ -58,11 +58,11 @@
     <div class="tab features" data-group="primary" data-tab="features">
       <section class="grid grid-3col">
         <aside class="sidebar">
-          <div class="flex-row">
+          <div class="flexrow">
             <p>Attack</p>
             <input type="text" name="data.attributes.attack.value" value="{{data.attributes.attack.value}}" data-dtype="Number"/>
           </div>
-          <div class="flex-row">
+          <div class="flexrow">
             <p>Defence</p>
             <input type="text" name="data.attributes.defence.value" value="{{data.attributes.defence.value}}" data-dtype="Number"/>
           </div>
