Changed Sheet layout.

--- a/templates/actor/actor-character-sheet.html
+++ b/templates/actor/actor-character-sheet.html
@@ -60,11 +60,11 @@
         <aside class="sidebar">
           <div class="flexrow">
             <p>Attack</p>
-            <input type="text" name="data.attributes.attack.value" value="{{data.attributes.attack.value}}" data-dtype="Number"/>
+            <input type="number" name="data.attributes.attack.value" value="{{data.attributes.attack.value}}" data-dtype="Number"/>
           </div>
           <div class="flexrow">
             <p>Defence</p>
-            <input type="text" name="data.attributes.defence.value" value="{{data.attributes.defence.value}}" data-dtype="Number"/>
+            <input type="number" name="data.attributes.defence.value" value="{{data.attributes.defence.value}}" data-dtype="Number"/>
           </div>
           {{!-- The grid classes are defined in scss/global/_grid.scss. To use,
           use both the "grid" and "grid-Ncol" class where "N" can be any number
