--- a/scss/components/_items.scss
+++ b/scss/components/_items.scss
@@ -15,7 +15,8 @@
     font-weight: bold;
     padding-left: 5px;
     text-align: left;
-    display: flex;
+    width: 50%;
+    // display: flex;
     // font-size: 16px;
   }
 }
