New Hero sheet.

--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -16,8 +16,8 @@
                     <tr>
                         <th>Body</th>
                         <td>
-                            <input type="number" name="data.body.value">{{stats.body.value}}</input>/
-                            <input type="number" name="data.body.max">{{stats.body.value}}</input>
+                            <input type="number" name="data.body.value" value="{{stats.body.value}}">/
+                            <input type="number" name="data.body.max" value="{{stats.body.value}}">
                         </td>
                     </tr>
                 </table>
