New Hero sheet.

--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -15,7 +15,7 @@
                     </tr>
                     <tr>
                         <th>Body</th>
-                        <td>
+                        <td class="flexrow">
                             <input type="number" name="data.body.value" value="{{data.data.body.value}}">/
                             <input type="number" name="data.body.max" value="{{data.data.body.value}}">
                         </td>
