New Hero sheet.

--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -8,12 +8,12 @@
         <div class="flexbox">
             <div>
                 <h2>Stats</h2>
-                <table>
-                    <tr>
+                <table class="center">
+                    <tr class="center">
                         <th>Move</th>
                         <td>2d6</td>
                     </tr>
-                    <tr>
+                    <tr class="center">
                         <th>Body</th>
                         <td class="flexrow">
                             <input type="number" name="data.body.value" value="{{data.data.body.value}}">/
