New Hero sheet.

--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -11,13 +11,13 @@
                 <table class="center">
                     <tr class="center">
                         <th>Move</th>
-                        <td>2d6</td>
+                        <td class="center">2d6</td>
                     </tr>
                     <tr class="center">
                         <th>Body</th>
                         <td class="flexrow">
-                            <input type="number" name="data.body.value" value="{{data.data.body.value}}">/
-                            <input type="number" name="data.body.max" value="{{data.data.body.value}}">
+                            <input class="center" type="number" name="data.body.value" value="{{data.data.body.value}}">/
+                            <input class="center" type="number" name="data.body.max" value="{{data.data.body.value}}">
                         </td>
                     </tr>
                 </table>
