--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -8,7 +8,7 @@
         <div class="flexbox">
             <div>
                 <h2>Stats</h2>
-                <table class="center">
+                <table class="center" style="table-layout: fixed;">
                     <tr class="center">
                         <th>Move</th>
                         <td class="center">2d6</td>
