New Hero sheet.

--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -11,7 +11,7 @@
                 <table class="center" style="table-layout: fixed;">
                     <tr class="center">
                         <th>Move</th>
-                        <td class="center">2d6</td>
+                        <td class="center"><p>2d6</p></td>
                     </tr>
                     <tr class="center">
                         <th>Body</th>
