New Hero sheet.

--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -20,6 +20,24 @@
                             <input class="center" type="number" name="data.body.max" value="{{data.data.body.value}}">
                         </td>
                     </tr>
+                    <tr class="center">
+                        <th>Attack</th>
+                        <td class="center">
+                            <input class="center" type="number" name="data.atk" value="{{data.data.atk}}">
+                        </td>
+                    </tr>
+                    <tr class="center">
+                        <th>Defence</th>
+                        <td class="center">
+                            <input class="center" type="number" name="data.def" value="{{data.data.def}}">
+                        </td>
+                    </tr>
+                    <tr class="center">
+                        <th>Mind</th>
+                        <td class="center">
+                            <input class="center" type="number" name="data.mind" value="{{data.data.mind}}">
+                        </td>
+                    </tr>
                 </table>
             </div>
         </div>
