--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -8,7 +8,7 @@
                 <div class="center" data-edit="name" contenteditable="">{{data.data.class}}</div>
             </h1>
         </div>
-        <div class="flexbox">
+        <div class="flexrow">
             <div>
                 <h2 class="center">Stats</h2>
                 <table class="center" style="table-layout: fixed;">
@@ -43,23 +43,23 @@
                     </tr>
                 </table>
             </div>
-        </div>
-        <div>
-            <h2 class="center">Gear</h2>
-            <table>
-                <tr>
-                    <th>Helmet</th>
-                    <td>{{data.data.armour.helmet}}</td>
-                </tr>
-                <tr>
-                    <th>Armour</th>
-                    <td>{{data.data.armour.body}}</td>
-                </tr>
-                <tr>
-                    <th>Shield</th>
-                    <td>{{data.data.armour.shield}}</td>
-                </tr>
-            </table>
+            <div>
+                <h2 class="center">Gear</h2>
+                <table>
+                    <tr>
+                        <th>Helmet</th>
+                        <td>{{data.data.armour.helmet}}</td>
+                    </tr>
+                    <tr>
+                        <th>Armour</th>
+                        <td>{{data.data.armour.body}}</td>
+                    </tr>
+                    <tr>
+                        <th>Shield</th>
+                        <td>{{data.data.armour.shield}}</td>
+                    </tr>
+                </table>
+            </div>
         </div>
     </div>
 </form>
