--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -5,7 +5,12 @@
                 <div class="center" data-edit="name" contenteditable="">{{actor.name}}</div>
             </h1>
             <h1 class="center">
-                <div class="center" data-edit="name" contenteditable="">{{data.data.class}}</div>
+                <select name="data.class">
+                    <option value="barbarian">Barbarian</option>
+                    <option value="dwarf">Dwarf</option>
+                    <option value="elf">Elf</option>
+                    <option value="wizard">Wizard</option>
+                </select>
             </h1>
         </div>
         <div class="flexrow">
