--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -27,32 +27,23 @@
                 <table class="center" style="table-layout: fixed;">
                     <tr class="center">
                         <th>Move</th>
-                        <td class="center"><p>2d6</p></td>
+                        <td>2d6</td>
                     </tr>
                     <tr class="center">
                         <th>Body</th>
-                        <td class="flexrow">
-                            <input class="center" type="number" name="data.body.value" value="{{data.data.body.value}}">/
-                            <input class="center" type="number" name="data.body.max" value="{{data.data.body.value}}">
-                        </td>
+                        <td>{{data.data.body.value}}/((data.data.body.max))</td>
                     </tr>
                     <tr class="center">
                         <th>Attack</th>
-                        <td class="center">
-                            <input class="center" type="number" name="data.atk" value="{{data.data.atk}}">
-                        </td>
+                        <td>{{data.data.atk}}</td>
                     </tr>
                     <tr class="center">
                         <th>Defence</th>
-                        <td class="center">
-                            <input class="center" type="number" name="data.def" value="{{data.data.def}}">
-                        </td>
+                        <td>{{data.data.def}}</td>
                     </tr>
                     <tr class="center">
                         <th>Mind</th>
-                        <td class="center">
-                            <input class="center" type="number" name="data.mind" value="{{data.data.mind}}">
-                        </td>
+                        <td>{{data.data.mind}}</td>
                     </tr>
                 </table>
             </div>
