--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -31,7 +31,7 @@
                     </tr>
                     <tr class="center">
                         <th>Body</th>
-                        <td>{{data.data.body.value}}/((data.data.body.max))</td>
+                        <td>{{data.data.body.value}}/{{data.data.body.max}}</td>
                     </tr>
                     <tr class="center">
                         <th>Attack</th>
