--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -52,15 +52,19 @@
                 <table>
                     <tr>
                         <th>Helmet</th>
-                        <td>{{data.data.armour.helmet}}</td>
+                        <td>{{data.data.helmet}}</td>
                     </tr>
                     <tr>
                         <th>Armour</th>
-                        <td>{{data.data.armour.body}}</td>
+                        <td>{{data.data.armour}}</td>
                     </tr>
                     <tr>
                         <th>Shield</th>
-                        <td>{{data.data.armour.shield}}</td>
+                        <td>{{data.data.shield}}</td>
+                    </tr>
+                    <tr>
+                        <th>Weapon</th>
+                        <td>{{data.data.weapon}}</td>
                     </tr>
                 </table>
             </div>
