--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -81,8 +81,8 @@
                     </tr>
                     {{#each data.data.potions as |potion|}}
                     <tr class="center" title="{{potion.description}}">
-                        <td>potion.name</td>
-                        <td>potion.amount</td>
+                        <td>{{potion.name}}</td>
+                        <td>{{potion.amount}}</td>
                         <td><a><i class="fas fa-flask-round-potion"></i></a></td>
                     </tr>
                     {{/each}}
