--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -83,7 +83,7 @@
                     <tr class="center" title="{{potion.description}}">
                         <td>{{potion.name}}</td>
                         <td>{{potion.amount}}</td>
-                        <td><a><i class="fas fa-flask-round-potion"></i></a></td>
+                        <td><a><i class="fas fa-flask"></i></a></td>
                     </tr>
                     {{/each}}
                 </table>
