--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -26,7 +26,7 @@
         </div>
         <div class="flexrow">
             <div>
-                <h2 class="center">Stats</h2>
+                <h3 class="center">Stats</h3>
                 <table class="center" style="table-layout: fixed;">
                     <tr class="center">
                         <th>Move</th>
@@ -51,7 +51,7 @@
                 </table>
             </div>
             <div>
-                <h2 class="center">Gear</h2>
+                <h3 class="center">Gear</h3>
                 <table>
                     <tr>
                         <th>Helmet</th>
@@ -73,7 +73,7 @@
             </div>
         </div>
         <div>
-            <h2>Potions</h2>
+            <h2 class="center">Potions</h2>
             <table>
                 <tr class="center">
                     <th class="perc80">Potion</th>
@@ -91,7 +91,7 @@
         </div>
         {{#if (gt data.data.spell_slots 0)}}
         <div>
-            <h3>Spells</h3>
+            <h2 class="center">Spells</h2>
         </div>
         {{/if}}
     </div>
