--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -18,10 +18,7 @@
                     <a class="center set-class">Select Class</a>
                 </h1>
             {{else}}
-                <div class="flexrow">
-                    <h3 class="center">{{data.data.class_name}}</h3>
-                    <h3 class="center">Gold: {{data.data.gold}}</h3>
-                </div>
+                <h3 class="center">{{data.data.class_name}}</h3>
             {{/if}}
         </div>
         <div class="flexrow">
@@ -66,6 +63,10 @@
                     <tr>
                         <th>Weapon</th>
                         <td>{{data.data.weapon}}</td>
+                    </tr>
+                    <tr>
+                        <th>Gold</th>
+                        <td>{{data.data.gold}}</td>
                     </tr>
                 </table>
             </div>
