--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -98,7 +98,7 @@
                     <th>Cast</th>
                 </tr>
                 {{#each data.data.spells as |spell|}}
-                <tr>
+                <tr class="center" title="{{spell.description}}">
                     <td>{{spell.name}}</td>
                     <td>{{spell.element}}</td>
                     <td><a><i class="fas fa-banhai"></i></a></td>
