--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -101,7 +101,7 @@
                 <tr class="center" title="{{spell.description}}">
                     <td>{{spell.name}}</td>
                     <td>{{spell.element}}</td>
-                    <td><a><i class="fas fa-banhai"></i></a></td>
+                    <td><a><i class="fas fa-bahai"></i></a></td>
                 </tr>
                 {{/each}}
             </table>
