--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -128,7 +128,7 @@
                     <th>Cast</th>
                 </tr>
                 {{#each data.data.spells as |spell|}}
-                    {{#has_spells spell.key)}}
+                    {{#has_spells spell.key}}
                 <tr class="center" title="{{spell.description}}">
                     <td>{{spell.name}}</td>
                     <td>{{spell.element}}</td>
