--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -134,7 +134,7 @@
                     <td>{{spell.element}}</td>
                     <td><a><i class="fas fa-bahai"></i></a></td>
                 </tr>
-                    {{/if}}
+                    {{/has_spells}}
                 {{/each}}
             </table>
         </div>
