--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -121,6 +121,11 @@
                 {{/if}}
                 </tr>
             </table>
+            {{#isGM}}
+            <div class="center">
+                <a class="center reset-spells">Reset Spells</a>
+            </div>
+            {{/isGM}}
             <table>
                 <tr class="center">
                     <th>Spell</th>
