--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -26,7 +26,7 @@
                 <table class="center" style="table-layout: fixed;">
                     <tr class="center">
                         <th>Move</th>
-                        <td>{{data.data.move + data.data.tmp_move}}d6</td>
+                        <td>{{#sum data.data.move '+'' data.data.tmp_move}}d6</td>
                     </tr>
                     <tr class="center">
                         <th>Body</th>
