--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -71,6 +71,14 @@
                 </table>
             </div>
         </div>
+        <div class="flexrow">
+            <button class="move-roll">Move ({{sum data.data.move '+' data.data.tmp_move}}d6)</button>
+            <button class="attack-roll">Attack ({{sum data.data.atk '+' (sum data.data.tmp_atk '+' data.data.spell_bonus_atk)}} dice)</button>
+            <button class="search-traps">Traps?</button>
+            {{#in_room}}
+            <button class="search-treasure">Treasure?</button>
+            {{/in_room}}
+        </div>
         <div>
             <h2 class="center">Potions</h2>
             <table>
