--- a/templates/actor/actor-hero-sheet.html
+++ b/templates/actor/actor-hero-sheet.html
@@ -72,8 +72,12 @@
             </div>
         </div>
         <div class="flexrow">
-            <button class="move-roll">Move ({{sum data.data.move '+' data.data.tmp_move}}d6)</button>
-            <button class="attack-roll">Attack ({{sum data.data.atk '+' (sum data.data.tmp_atk '+' data.data.spell_bonus_atk)}} dice)</button>
+            {{#if (eq data.data.move_rolled false)}}
+                <button class="move-roll">Move ({{sum data.data.move '+' data.data.tmp_move}}d6)</button>
+            {{/if}}
+            {{#if (gt data.data.atk_count 0)}}
+                <button class="attack-roll">Attack ({{sum data.data.atk '+' (sum data.data.tmp_atk '+' data.data.spell_bonus_atk)}} dice)</button>
+            {{/if}}
             <button class="search-traps">Traps?</button>
             {{#in_room}}
             <button class="search-treasure">Treasure?</button>
@@ -146,7 +150,11 @@
                 <tr class="center" title="{{spell.description}}">
                     <td>{{spell.name}}</td>
                     <td>{{spell.element}}</td>
-                    <td class="cast-spell" data-spell="{{@key}}"><a><i class="fas fa-bahai"></i></a></td>
+                    {{#if (gt data.data.atk_count 0)}}
+                        <td class="cast-spell" data-spell="{{@key}}"><a><i class="fas fa-bahai"></i></a></td>
+                    {{else}}
+                    <td><a><i class="fas fa-times"></i></a></td>
+                    {{/if}}
                 </tr>
                         {{/if}}
                     {{/has_spells}}
